Unify BOLT protocols onto a single port
Move TCP, secure TCP, websocket, secure websocket into one single port 7687
This allows an informative message to be returned,
instructing the user that a encrypted connection is required or forbidden.

--- a/packaging/standalone/standalone-advanced/src/main/distribution/text/advanced/conf/neo4j-server.properties
+++ b/packaging/standalone/standalone-advanced/src/main/distribution/text/advanced/conf/neo4j-server.properties
@@ -27,12 +27,12 @@ dbms.security.auth_enabled=#{dbms.security.require_auth}
 # Bolt protocol
 #
 
-dbms.bolt.enabled=true
-dbms.bolt.tls.enabled=false
+# dbms.connector group configuration
+dbms.connector.0.bolt.enabled=true
+dbms.connector.0.bolt.tls.level=OPTIONAL
 
 # Uncomment to have Bolt accept non-local connections
-# dbms.bolt.socket.address=0.0.0.0:7687
-# dbms.bolt.websocket.address=0.0.0.0:7688
+# dbms.connector.0.bolt.address=0.0.0.0:7687
 
 #
 # HTTP Connector
