--- a/enterprise/metrics/pom.xml
+++ b/enterprise/metrics/pom.xml
@@ -54,13 +54,17 @@
                 <java classname="org.neo4j.metrics.docs.GenerateMetricsDocumentation"
                       classpathref="maven.test.classpath" failonerror="true">
                   <arg value="--output=${project.build.directory}/docs/ops/available-metrics.asciidoc" />
+
                   <arg value="org.neo4j.metrics.source.CheckPointingMetrics" />
                   <arg value="org.neo4j.metrics.source.EntityCountMetrics" />
                   <arg value="org.neo4j.metrics.source.PageCacheMetrics" />
                   <arg value="org.neo4j.metrics.source.TransactionMetrics" />
                   <arg value="org.neo4j.metrics.source.CypherMetrics" />
+                  <arg value="org.neo4j.metrics.source.LogRotationMetrics" />
+
                   <arg value="org.neo4j.metrics.source.NetworkMetrics" />
                   <arg value="org.neo4j.metrics.source.ClusterMetrics" />
+
                   <arg value="org.neo4j.metrics.source.JvmMetrics" />
                 </java>
               </target>
