--- a/community/pom.xml
+++ b/community/pom.xml
@@ -61,6 +61,7 @@
     <module>consistency-check</module>
     <module>neo4j-harness</module>
     <module>licensecheck-config</module>
+    <module>upgade</module>
   </modules>
 
   <licenses>
