--- a/community/kernel/pom.xml
+++ b/community/kernel/pom.xml
@@ -132,7 +132,7 @@ the relevant Commercial Agreement.
         <configuration>
           <dotGitDirectory>${git.directory}</dotGitDirectory>
           <failOnNoGitDirectory>false</failOnNoGitDirectory>
-          <useNativeGit>true</useNativeGit>
+          <useNativeGit>false</useNativeGit>
         </configuration>
       </plugin>
       <plugin>
