Metrics for core-edge module
We'll add more as we work out what's useful but for now we're tracking

* Append Index
* Commit Index

of the RAFT log

--- a/enterprise/metrics/pom.xml
+++ b/enterprise/metrics/pom.xml
@@ -67,6 +67,14 @@
 
     <dependency>
       <groupId>org.neo4j</groupId>
+      <artifactId>neo4j-core-edge</artifactId>
+      <version>${project.version}</version>
+      <scope>provided</scope>
+    </dependency>
+
+
+    <dependency>
+      <groupId>org.neo4j</groupId>
       <artifactId>neo4j-io</artifactId>
       <version>${project.version}</version>
       <scope>provided</scope>
