Move various tools used by dev team into a new separate location
Moving existent tools into a common separate place.
That will help to find existent tool to solve various issues with stores, tx logs, etc,
will increase tool awarness level.

--- a/tools/pom.xml
+++ b/tools/pom.xml
@@ -69,6 +69,11 @@
     </dependency>
     <dependency>
       <groupId>org.neo4j</groupId>
+      <artifactId>neo4j-com</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.neo4j</groupId>
       <artifactId>neo4j-bolt</artifactId>
       <version>${project.version}</version>
       <type>test-jar</type>
