Added maven dependency for Bouncy Castle to bolt
It is used by Netty for self-signed certificate generation. It is a fallback
path if proprietary package sun.security.x509 provided by OpenJDK is not
in the classpath. In particular, IBM JDK does not include this package.

--- a/community/bolt/pom.xml
+++ b/community/bolt/pom.xml
@@ -97,6 +97,14 @@
       <type>test-jar</type>
       <scope>test</scope>
     </dependency>
+
+    <!-- This dependency is needed for Netty to be able to generate
+    self signed certificate on a JDK without sun.security.* package -->
+    <dependency>
+      <groupId>org.bouncycastle</groupId>
+      <artifactId>bcpkix-jdk15on</artifactId>
+    </dependency>
+
     <dependency>
       <groupId>org.eclipse.jetty.websocket</groupId>
       <artifactId>websocket-client</artifactId>
