--- a/community/server/pom.xml
+++ b/community/server/pom.xml
@@ -223,6 +223,8 @@
       <groupId>org.bouncycastle</groupId>
       <artifactId>bcprov-jdk15on</artifactId>
     </dependency>
+    <!-- This dependency is needed for Netty to be able to generate
+    self signed certificate on a JDK without sun.security.* package -->
     <dependency>
       <groupId>org.bouncycastle</groupId>
       <artifactId>bcpkix-jdk15on</artifactId>
