Cleanup modules from tests generated neo4j-home/data and neo4j-home directories
Make all test generated folders to be relative to java.io.tmpdir
which in most of the cases will be updated by maven-surefire-plugin to project.build.directory (module /target)
Cleanup gitignore files.

--- a/integrationtests/pom.xml
+++ b/integrationtests/pom.xml
@@ -21,6 +21,20 @@
     <url>https://github.com/neo4j/neo4j</url>
   </scm>
 
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <systemPropertyVariables>
+            <java.io.tmpdir>${project.build.directory}</java.io.tmpdir>
+          </systemPropertyVariables>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
+
   <dependencies>
     <dependency>
       <groupId>org.neo4j</groupId>
