--- a/manual/javadocs/pom.xml
+++ b/manual/javadocs/pom.xml
@@ -160,8 +160,11 @@ the relevant Commercial Agreement.
               <doctitle>Neo4j ${project.version} API</doctitle>
               <windowtitle>Neo4j ${project.version} API</windowtitle>
               <show>public</show>
+              <subpackages>
+                org.neo4j.backup:org.neo4j.cypher.export:org.neo4j.cypher.javacompat:org.neo4j.graphalgo:org.neo4j.graphdb:org.neo4j.helpers:org.neo4j.helpers.collection:org.neo4j.index:org.neo4j.jmx:org.neo4j.management:org.neo4j.server:org.neo4j.tooling:org.neo4j.unsafe.batchinsert
+              </subpackages>
               <excludePackageNames>
-*.impl.*:*.internal.*:org.neo4j.ext.udc:org.neo4j.kernel:org.neo4j.kernel.extension:org.neo4j.kernel.ha:org.neo4j.kernel.ha.*:org.neo4j.com:org.neo4j.com.*:org.apache.lucene.index:org.neo4j.cluster.*:org.neo4j.helpers.progress:org.neo4j.kernel.configuration:org.neo4j.kernel.guard:org.neo4j.kernel.info:org.neo4j.kernel.logging:org.neo4j.backup.log:org.neo4j.helpers.logging:org.neo4j.function:org.neo4j.function.*:org.neo4j.logging:org.neo4j.logging.*:org.neo4j.udc
+                *.impl.*:*.internal.*:org.neo4j.helpers.progress
               </excludePackageNames>
               <groups>
                 <group>
@@ -175,8 +178,7 @@ the relevant Commercial Agreement.
                 </group>
                 <group>
                   <title>Graph algorithms</title>
-                  <packages>org.neo4j.graphalgo:org.neo4j.graphalgo.*
-                  </packages>
+                  <packages>org.neo4j.graphalgo:org.neo4j.graphalgo.*</packages>
                 </group>
                 <group>
                   <title>Management</title>
@@ -187,12 +189,16 @@ the relevant Commercial Agreement.
                   <packages>org.neo4j.management:org.neo4j.management.*</packages>
                 </group>
                 <group>
-                  <title>Tooling</title>
-                  <packages>org.neo4j.tooling:org.neo4j.tooling.*</packages>
+                  <title>Backup (Enterprise edition)</title>
+                  <packages>org.neo4j.backup</packages>
                 </group>
                 <group>
                   <title>Import</title>
                   <packages>org.neo4j.unsafe.batchinsert</packages>
+                </group>
+                <group>
+                  <title>Tooling</title>
+                  <packages>org.neo4j.tooling:org.neo4j.tooling.*</packages>
                 </group>
                 <group>
                   <title>Server Plugin API</title>
@@ -203,20 +209,8 @@ the relevant Commercial Agreement.
                   <packages>org.neo4j.helpers:org.neo4j.helpers.*</packages>
                 </group>
                 <group>
-                  <title>High Availability (Enterprise edition)</title>
-                  <packages>org.neo4j.cluster</packages>
-                </group>
-                <group>
-                  <title>Backup (Enterprise edition)</title>
-                  <packages>org.neo4j.backup</packages>
-                </group>
-                <group>
                   <title>Legacy Indexes</title>
                   <packages>org.neo4j.index:org.neo4j.index.*</packages>
-                </group>
-                <group>
-                  <title>Graph matching</title>
-                  <packages>org.neo4j.graphmatching:org.neo4j.graphmatching.*</packages>
                 </group>
               </groups>
               <additionalDependencies>
