--- a/manual/javadocs/pom.xml
+++ b/manual/javadocs/pom.xml
@@ -161,10 +161,10 @@ the relevant Commercial Agreement.
               <windowtitle>Neo4j ${project.version} API</windowtitle>
               <show>public</show>
               <subpackages>
-                org.neo4j.backup:org.neo4j.cypher.export:org.neo4j.cypher.javacompat:org.neo4j.graphalgo:org.neo4j.graphdb:org.neo4j.helpers:org.neo4j.helpers.collection:org.neo4j.index:org.neo4j.jmx:org.neo4j.management:org.neo4j.server:org.neo4j.tooling:org.neo4j.unsafe.batchinsert
+                org.neo4j.backup:org.neo4j.cypher.export:org.neo4j.cypher.javacompat:org.neo4j.graphalgo:org.neo4j.graphdb:org.neo4j.helpers:org.neo4j.helpers.collection:org.neo4j.index:org.neo4j.jmx:org.neo4j.management:org.neo4j.server:org.neo4j.tooling:org.neo4j.unsafe.batchinsert:org.neo4j.logging
               </subpackages>
               <excludePackageNames>
-                *.impl.*:*.internal.*:org.neo4j.helpers.progress
+                *.impl.*:*.internal.*:org.neo4j.helpers.progress:org.neo4j.logging.async
               </excludePackageNames>
               <groups>
                 <group>
@@ -187,6 +187,10 @@ the relevant Commercial Agreement.
                 <group>
                   <title>Management (Enterprise edition)</title>
                   <packages>org.neo4j.management:org.neo4j.management.*</packages>
+                </group>
+                <group>
+                  <title>Logging</title>
+                  <packages>org.neo4j.logging:org.neo4j.logging.*</packages>
                 </group>
                 <group>
                   <title>Backup (Enterprise edition)</title>
