Adding the config variable ness for AWS ELB

--- a/packaging/standalone/standalone-enterprise/src/main/distribution/text/enterprise/conf/neo4j.properties
+++ b/packaging/standalone/standalone-enterprise/src/main/distribution/text/enterprise/conf/neo4j.properties
@@ -54,6 +54,15 @@ online_backup_server=127.0.0.1:6362
 # an integer (e.g. 1), and should be unique for each cluster instance.
 #ha.server_id=
 
+# If you are using a Health Check or heartbeat (For example using AWS ELB)
+# it is required to configure your ELB to point to 
+# HTTP:7474/db/manage/server/ha/available. 
+# If your load balancer does not support adding authentication credentials
+# then you need to remove authentication from the 'available' service.
+# This can be done by uncommenting the next line.
+# dbms.security.ha_status_auth_enabled=false
+
+
 # ha.initial_hosts is a comma-separated list (without spaces) of the host:port
 # where the ha.cluster_server of all instances will be listening. Typically
 # this will be the same for all cluster instances.
