Updating default config settings
* The BOLT protocol now has a single port as per commit
  6a8639a9f6aca735321adc159253218b614c6de2 but the default
  properties are out of date.

--- a/packaging/standalone/standalone-advanced/src/main/distribution/text/advanced/conf/neo4j-server.properties
+++ b/packaging/standalone/standalone-advanced/src/main/distribution/text/advanced/conf/neo4j-server.properties
@@ -28,11 +28,11 @@ dbms.security.auth_enabled=#{dbms.security.require_auth}
 #
 
 # dbms.connector group configuration
-dbms.connector.0.bolt.enabled=true
-dbms.connector.0.bolt.tls.level=OPTIONAL
+dbms.connector.0.enabled=true
+dbms.connector.0.tls.level=OPTIONAL
 
 # Uncomment to have Bolt accept non-local connections
-# dbms.connector.0.bolt.address=0.0.0.0:7687
+# dbms.connector.0.address=0.0.0.0:7687
 
 #
 # HTTP Connector
