Remove wait after start from Unix script
This functionality has long been problematic for three reasons.

* It uses lsof which is an endless cause of compatibility bugs because
  its interface changes across distributions and verions.
* It doesn't actually work as intended. The expectation is that the
  server is ready to serve requests when the script exits. In fact that
  is not quite the case because Jetty has this weird behaviour where it
  binds the port before the handler is actually ready. So using "port
  bound" as a proxy for "ready" doesn't work.
* It takes a massively simplistic view of what it means for Neo4j to be
  "ready". It doesn't take into account the complexity of recovery,
  upgrades or clustering; each of which can make the server unavailable
  even though the port is bound.

We are losing functionality here because errors early in the DBMS
lifecycle may not be repoorted. Probably the biggest loss is in the case
when there is something else listening on the same port. Previously we
attempted to catch that in the shell script and give a clear message but
now the user will have to look in the logs find the information they
need.

In fact even this latter is not as simple as it looks since, following
the changes for Bolt, it's now possible for the DBMS to be running
perfectly happily with nothing listening on port 7474.

We hope to introduce mitigation for this loss later. Either have
something that polls real endpoints (e.g. curl), although it's not clear
how that would work in the Bolt-only case; or modify the DMBS so that it
can signal back to the parent process that it's up and happy.

As a temporary measure we are sleeping for five seconds after starting
the process and checking that it's still alive. That way we can tell the
user about very early errors (e.g. port binding problems). The sleep
time has been chosen experimentally and we can't be sure that it will
always be long enough.

--- a/packaging/installer-linux/installer-debian/src/main/resources/advanced/debian/control
+++ b/packaging/installer-linux/installer-debian/src/main/resources/advanced/debian/control
@@ -8,7 +8,7 @@ Homepage: http://neo4j.org/
 
 Package: neo4j-advanced
 Architecture: all
-Depends: ${misc:Depends}, daemon, adduser, psmisc, lsof, lsb-base, java8-runtime | j2re1.8
+Depends: ${misc:Depends}, daemon, adduser, psmisc, lsb-base, java8-runtime | j2re1.8
 Conflicts: 
 Replaces: neo4j-enterprise, neo4j
 Description: graph database server
