--- a/packaging/standalone/standalone-community/src/main/distribution/text/community/conf/neo4j-wrapper.conf
+++ b/packaging/standalone/standalone-community/src/main/distribution/text/community/conf/neo4j-wrapper.conf
@@ -37,6 +37,8 @@ wrapper.java.additional=-XX:hashCode=5
 # Try reducing the heap memory, if this flag degrades performance.
 wrapper.java.additional=-XX:+AlwaysPreTouch
 
+wrapper.java.additional=-XX:+DisableExplicitGC
+
 # Uncomment the following lines to enable garbage collection logging
 #wrapper.java.additional=-Xloggc:data/log/neo4j-gc.log
 #wrapper.java.additional=-XX:+PrintGCDetails
