--- a/packaging/standalone/pom.xml
+++ b/packaging/standalone/pom.xml
@@ -47,7 +47,7 @@
     <windows-wrapper.filename>windows-service-wrapper-${windows-wrapper.version}.jar</windows-wrapper.filename>
 
     <!-- conf/neo4j-server.properties filter properties -->
-    <org.neo4j.database.location>data/graph.db</org.neo4j.database.location>
+    <org.neo4j.database.location>data/databases/graph.db</org.neo4j.database.location>
     <org.neo4j.server.webserver.http.enabled>true</org.neo4j.server.webserver.http.enabled>
     <org.neo4j.webserver.port>7474</org.neo4j.webserver.port>
 
