--- a/community/logging/pom.xml
+++ b/community/logging/pom.xml
@@ -50,19 +50,24 @@ the relevant Commercial Agreement.
   </licenses>
 
   <dependencies>
-<!--     <dependency> -->
-<!--       <groupId>org.neo4j</groupId> -->
-<!--       <artifactId>neo4j-io</artifactId> -->
-<!--       <version>${project.version}</version> -->
-<!--     </dependency> -->
+    <dependency>
+      <groupId>org.neo4j</groupId>
+      <artifactId>neo4j-fs</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.neo4j</groupId>
+      <artifactId>neo4j-function</artifactId>
+      <version>${project.version}</version>
+    </dependency>
 
-<!--     <dependency> -->
-<!--       <groupId>org.neo4j</groupId> -->
-<!--       <artifactId>neo4j-io</artifactId> -->
-<!--       <version>${project.version}</version> -->
-<!--       <type>test-jar</type> -->
-<!--       <scope>test</scope> -->
-<!--     </dependency> -->
+    <dependency>
+      <groupId>org.neo4j</groupId>
+      <artifactId>neo4j-fs</artifactId>
+      <version>${project.version}</version>
+      <type>test-jar</type>
+      <scope>test</scope>
+    </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
